--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm install --save-dev",
+  "name": "bunorm",
   "version": "0.0.1",
   "description": "A simple project, created with dokument.",
   "main": "src/index.ts",
@@ -8,6 +8,7 @@
     "build": "tsc ."
   },
   "devDependencies": {
+    "@changesets/cli": "^2.24.2",
     "@types/node": "^18.6.5",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
