Chore: Made package executable via bun

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "run": "ts-node src/index.ts",
+    "run-bun": "bun src/index.ts",
     "build": "tsc ."
   },
   "devDependencies": {
