--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.6.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dokument": "^0.2.1",
     "eslint": "^8.21.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
